custom scrollbar is design and fixed some error in css

--- a/css/QB.css
+++ b/css/QB.css
@@ -252,3 +252,23 @@ video {
         margin-bottom: 1.5rem;
     }
 }
+
+
+
+
+/* Scrollbar design */
+
+
+
+::-webkit-scrollbar {
+    width: 12px; 
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: black; 
+    border-radius: 6px; 
+  }
