--- a/css/comp12.css
+++ b/css/comp12.css
@@ -226,3 +226,23 @@ p b {
         margin-bottom: 1.5rem;
     }
 }
+
+
+
+
+/* Scrollbar design */
+
+
+
+::-webkit-scrollbar {
+    width: 12px; 
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: black; 
+    border-radius: 6px; 
+  }
