--- a/css/language.css
+++ b/css/language.css
@@ -14,4 +14,26 @@
   h3, h4 {
     color: aqua;
   }
+
+
+
+
+
+
+  /* Scrollbar design */
+
+
+
+::-webkit-scrollbar {
+  width: 12px; 
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+
+::-webkit-scrollbar-thumb {
+  background: black; 
+  border-radius: 6px; 
+}
   
