--- a/css/projectwork.css
+++ b/css/projectwork.css
@@ -504,9 +504,9 @@ footer ul li a:hover {
         place-items: center;
     }
 
-    .nav__menu li a: hover {
+    .nav__menu li a:hover {
         background: var(--color-bg2);
-        color: var(--color-white);
+        color:var(--color-white);
     }
 
     /*========= header ======== */
@@ -940,3 +940,23 @@ h4 {
     padding-top: 30px;
     border-radius: 7px;
 }
+
+
+
+
+/* Scrollbar design */
+
+
+
+::-webkit-scrollbar {
+    width: 12px; 
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: black; 
+    border-radius: 6px; 
+  }
